# mc-server-rs

./: Cargo.toml
src/: main.rs
