[package]
name = "mc-server-rs"
version = "0.1.0"
authors = ["Aarón Sánchez <aaronsanchezmenendez@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.193", features = ["derive"] }
futures-util = "0.3.29"
cliclack = "0.1.12"
colored = "2.1.0"
